# rusm

./: .gitignore  Cargo.toml  README.md  build.sh  conventions.md  test.sh
src/: asm.rs  expressions.rs  instructions.rs  lib.rs  operands.rs  symbols.rs
src/asm/: mod.rs
src/x86/: io.rs  jumps.rs  memory.rs  mod.rs  operands.rs  registers.rs  shifts.rs  simpleMath.rs  state.rs  tmp.rs  zeroOperands.rs
src/x87/: cmov.rs  load.rs  math.rs  misc.rs  mod.rs  operands.rs  registerOperand.rs  simple.rs  zeroOperands.rs
tests/: 8086.rs  8087.rs  generic.rs
